fix menu spacing

--- a/layout/sass/menu.sass
+++ b/layout/sass/menu.sass
@@ -13,7 +13,7 @@ nav
             overflow: visible
             max-height: unset
             flex-direction: row
-            justify-content: space-between
+            justify-content: space-evenly
         li
             display: inline
             position: relative
